--- a/.github/workflows/create-diagram.yml
+++ b/.github/workflows/create-diagram.yml
@@ -1,16 +1,28 @@
 name: Create diagram
+
+permissions:
+  contents: write
+
 on:
   workflow_dispatch: {}
   push:
     branches:
       - main
+
 jobs:
   get_data:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout code
-        uses: actions/checkout@master
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Update diagram
         uses: githubocto/repo-visualizer@main
         with:
-          excluded_paths: "ignore,.github"
+          excluded_paths: "ignore,.github,.githooks"
+          should_push: true
+          commit_message: "chore: update repository diagram" 
+          artifact_name: "repo-diagram"
